# hyper-simple-server

documentation/: readme.md
examples/: Cargo.toml
examples/sources/: main.rs
examples/tls/: self-signed--any--certificate.conf  self-signed--ed25519--bundle.p12  self-signed--ed25519--bundle.pem  self-signed--ed25519--certificate.pem  self-signed--ed25519--private-key.pem  self-signed--rsa--bundle.p12  self-signed--rsa--bundle.pem  self-signed--rsa--certificate.pem  self-signed--rsa--private-key.pem  testing--ca--any--certificate.conf  testing--ca--ed25519--certificate.pem  testing--ca--ed25519--private-key.pem  testing--ca--rsa--certificate.pem  testing--ca--rsa--private-key.pem  testing--ca.pem  testing--client--any--certificate.conf  testing--client--ed25519--bundle.p12  testing--client--ed25519--bundle.pem  testing--client--ed25519--certificate.pem  testing--client--ed25519--private-key.pem  testing--client--ed25519--request.pem  testing--client--rsa--bundle.p12  testing--client--rsa--bundle.pem  testing--client--rsa--certificate.pem  testing--client--rsa--private-key.pem  testing--client--rsa--request.pem  testing--server--any--certificate.conf  testing--server--ed25519--bundle.p12  testing--server--ed25519--bundle.pem  testing--server--ed25519--certificate.pem  testing--server--ed25519--private-key.pem  testing--server--ed25519--request.pem  testing--server--rsa--bundle.p12  testing--server--rsa--bundle.pem  testing--server--rsa--certificate.pem  testing--server--rsa--private-key.pem  testing--server--rsa--request.pem
scripts/: _z-run  cargo-core.z-run  cargo-dependencies.z-run  cargo-publish.z-run  custom-configurations.z-run  custom-environment.z-run  custom-features.z-run  custom-generators.z-run  custom-tls.z-run  environment-common.z-run  project-all.z-run  project-binary.z-run  project-common.z-run  project-example.z-run  project-features.z-run  project-generators.z-run  project-sources.z-run  testing-curl.z-run  testing-nat.z-run  testing-tls.z-run  testing-wrk.z-run  tools-cargo.z-run  tools-watch.z-run  z-run
scripts/common/: cargo-dependencies.z-run  cargo-publish.z-run  project-binary.z-run  project-common.z-run  project-example.z-run  project-features.z-run  project-generators.z-run  project-sources.z-run  rust-environment.z-run  testing-curl.z-run  testing-nat.z-run  tools-cargo.z-run  tools-watch.z-run
sources/: Cargo.toml  accepter.rs  cli.rs  config.rs  configuration.rs  connection.rs  errors.rs  example.rs  exports.rs  extensions.rs  handler.rs  lib.rs  main.rs  prelude.rs  profiling.rs  resources.rs  routes.rs  sanitize.rs  server.rs  tls-testing-bundle.p12  tls-testing-bundle.pem
