

[package]
name = "hyper-simple-server-example"
version = "0.0.0"
publish = false
edition = "2021"
rust-version = "1.75"
license = "MIT"


[[bin]]
name = "example"
path = "./sources/main.rs"




[dependencies]

hyper-simple-server = { version = "*", default-features = false, features = [] }




[features]

# meta
default = ["hss-full"]

# meta
hss-full = ["hyper-simple-server/hss-full"]
hss-full-http1 = ["hyper-simple-server/hss-full-http1"]
hss-full-http2 = ["hyper-simple-server/hss-full-http2"]

# meta
hss-server-full = ["hyper-simple-server/hss-server-full"]
hss-server-http1 = ["hyper-simple-server/hss-server-http1"]
hss-server-http2 = ["hyper-simple-server/hss-server-http2"]

# gate
hss-cli = ["hyper-simple-server/hss-cli"]
hss-exports = ["hyper-simple-server/hss-exports"]
hss-extensions = ["hyper-simple-server/hss-extensions"]
hss-handler = ["hyper-simple-server/hss-handler"]
hss-jemalloc = ["hyper-simple-server/hss-jemalloc"]
hss-mimalloc = ["hyper-simple-server/hss-mimalloc"]
hss-main = ["hyper-simple-server/hss-main"]
hss-resources = ["hyper-simple-server/hss-resources"]
hss-routes = ["hyper-simple-server/hss-routes"]
hss-runtime = ["hyper-simple-server/hss-runtime"]
hss-runtime-mt = ["hyper-simple-server/hss-runtime-mt"]
hss-sanitize = ["hyper-simple-server/hss-sanitize"]
hss-server-debug-jemalloc = ["hyper-simple-server/hss-server-debug-jemalloc"]
hss-server-debug-strace = ["hyper-simple-server/hss-server-debug-strace"]
hss-server-mt = ["hyper-simple-server/hss-server-mt"]
hss-server-sanitize = ["hyper-simple-server/hss-server-sanitize"]
hss-server-profiling = ["hyper-simple-server/hss-server-profiling"]
hss-tls-native = ["hyper-simple-server/hss-tls-native"]
hss-tls-rust = ["hyper-simple-server/hss-tls-rust"]




[patch.crates-io]

# hyper-simple-server = { git = "https://github.com/console9/hyper-simple-server", tag = "v0.6.1" }
# hyper-simple-server = { git = "https://github.com/console9/hyper-simple-server", branch = "console9" }
# hyper-simple-server = { git = "https://github.com/console9/hyper-simple-server", branch = "development" }
hyper-simple-server = { path = "../../hyper-simple-server/sources" }

# vrl-errors = { git = "https://github.com/volution/volution-rust-libraries", tag = "v0.1.1" }
# vrl-cli-arguments = { git = "https://github.com/volution/volution-rust-libraries", tag = "v0.1.1" }

# vrl-errors = { git = "https://github.com/volution/volution-rust-libraries", branch = "console9" }
# vrl-cli-arguments = { git = "https://github.com/volution/volution-rust-libraries", branch = "console9" }

vrl-errors = { git = "https://github.com/volution/volution-rust-libraries", branch = "development" }
vrl-cli-arguments = { git = "https://github.com/volution/volution-rust-libraries", branch = "development" }

# vrl-errors = { path = "../../volution-rust-libraries/sources/errors" }
# vrl-cli-arguments = { path = "../../volution-rust-libraries/sources/cli-arguments" }


