

[package]
name = "hyper-simple-server"
version = "0.3.0"
authors = ["Ciprian Dorin Craciun <ciprian@volution.ro>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/console9/hyper-simple-server"
documentation = "https://docs.rs/hyper-simple-server"
description = "Simple friendly wrapper around hyper HTTP server"
autobins = false
autoexamples = false
autotests = false
autobenches = false


[lib]
name = "hyper_simple_server"
path = "./lib.rs"




[features]


# meta
default = ["hss-full"]


# meta
hss-full = [
	"hss-full-http1",
	"hss-full-http2",
	"hss-server-full",
]

# meta
hss-full-http1 = [
	"hss-full-common",
	"hss-server-http1",
]

# meta
hss-full-http2 = [
	"hss-full-common",
	"hss-server-http2",
]

# meta(crate)
hss-full-common = [
	"hss-server-mt",
	"hss-server-sanitize",
	"hss-handler",
	"hss-routes",
	"hss-config",
	"hss-accepter",
	"hss-tls-rust",
	"hss-tls-native",
	"hss-exports",
	"hss-extensions",
	"hss-errors",
	"hss-sanitize",
	"hss-main",
	"hss-cli",
]


# meta
hss-server-full = [
	"hss-server-mt",
	"hss-server-http1",
	"hss-server-http2",
]

# meta
hss-server-http1 = [
	"hss-server-core",
	"hyper--server-http1",
]

# meta
hss-server-http2 = [
	"hss-server-core",
	"hyper--server-http2",
]

# gate
hss-server-mt = [
	"tokio--rt-multi-thread",
]

# gate
hss-server-sanitize = [
	"hss-sanitize",
]

# meta(crate)
hss-server-core = [
	"hss-config",
	"hss-accepter",
	"hyper--server",
#	"hyper--runtime", # NOTE:  Optional for timeouts support.
	"tokio--rt",
]

# gate(crate)
hss-accepter = [
	"hss-config",
	"tokio--net",
	"futures",
]

# gate(crate)
hss-config = []


# gate
hss-handler = [
	"hyper--http",
	"futures",
]

# gate
hss-routes = [
	"hss-handler",
	"path-tree",
]

# gate
hss-sanitize = [
	"hyper--http",
]

# gate
hss-extensions = [
	"hyper--http",
]


# gate
hss-errors = []

# gate
hss-exports = []


# gate
hss-main = []

# gate
hss-cli = [
	"argparse",
]


# gate
hss-tls-rust = [
	"hss-tls-any",
	"rustls",
	"rustls-pemfile",
	"tokio-rustls",
]

# gate
hss-tls-native = [
	"hss-tls-any",
	"native-tls",
	"native-tls/alpn",
	"tokio-native-tls",
]

# gate(crate)
hss-tls-any = []


# gate
hss-jemalloc = [
	"jemallocator",
]

# gate
hss-server-debug-strace = []

# gate
hss-server-debug-jemalloc = [
	"jemalloc-sys/stats",
]


hyper--server-http1 = ["hyper--server-http", "hyper--http1"]
hyper--server-http2 = ["hyper--server-http", "hyper--http2"]
hyper--server-http = ["hyper--server"]
hyper--server = ["hyper", "hyper/server"]
hyper--http1 = ["hyper", "hyper/http1", "hyper--http"]
hyper--http2 = ["hyper", "hyper/http2", "hyper--http"]
hyper--http = ["hyper", "http", "http-body", "bytes"]
hyper--runtime = ["hyper", "hyper/runtime"]

tokio--rt = ["tokio", "tokio/rt"]
tokio--rt-multi-thread = ["tokio", "tokio/rt-multi-thread"]
tokio--net = ["tokio", "tokio/net"]


features-fuzzing = []
features-none = []




[dependencies]

hyper = { version = "0.14.4", default-features = false, features = [], optional = true }
tokio = { version = "1.2.0", default-features = false, features = [], optional = true }
http = { version = "0.2.3", default-features = false, features = [], optional = true }
http-body = { version = "0.4.0", default-features = false, features = [], optional = true }
bytes = { version = "1.0.1", default-features = false, features = [], optional = true }

rustls = { version = "0.19.0", default-features = false, features = [], optional = true }
tokio-rustls = { version = "0.22.0", default-features = false, features = [], optional = true }
rustls-pemfile = { version = "0.2.0", default-features = false, features = [], optional = true }

native-tls = { version = "0.2.7", default-features = false, features = [], optional = true }
tokio-native-tls = { version = "0.3.0", default-features = false, features = [], optional = true }

futures = { version = "0.3.12", default-features = false, features = [], optional = true }
path-tree = { version = "0.1.12", default-features = false, features = [], optional = true }
argparse = { version = "0.2.2", default-features = false, features = [], optional = true }

jemallocator = { version = "0.3.2", default-features = false, features = [], optional = true }
jemalloc-sys = { version = "0.3.2", default-features = false, features = [], optional = true }

