
################################################################################
################################################################################




[package]

name = "hyper-simple-server"

version = "0.6.0"
publish = false

edition = "2021"
rust-version = "1.75"
resolver = "2"

authors = [
	"Ciprian Dorin Craciun <ciprian@volution.ro>",
]
license = "MIT"

description = "Simple friendly wrapper around hyper HTTP server"
keywords = []
categories = []

homepage = "https://github.com/console9/hyper-simple-server"
repository = "https://github.com/console9/hyper-simple-server"
documentation = "https://docs.rs/hyper-simple-server"

autobins = false
autoexamples = false
autotests = false
autobenches = false




[lib]

name = "hyper_simple_server"
path = "./lib.rs"

test = false
bench = false
doctest = false




################################################################################
################################################################################




[features]


# meta
default = ["hss-full"]


# meta
hss-full = [
	"hss-full-http1",
	"hss-full-http2",
	"hss-server-full",
]

# meta
hss-full-http1 = [
	"hss-full-common",
	"hss-server-http1",
]

# meta
hss-full-http2 = [
	"hss-full-common",
	"hss-server-http2",
]

# meta(crate)
hss-full-common = [
	"hss-server-mt",
	"hss-server-sanitize",
#	"hss-server-profiling", # NOTE:  Breaks OSX builds.
	"hss-handler",
	"hss-routes",
	"hss-config",
	"hss-accepter",
	"hss-tls-rust",
#	"hss-tls-native", # NOTE:  Breaks static builds.
	"hss-exports",
	"hss-extensions",
	"hss-resources",
	"hss-sanitize",
	"hss-main",
	"hss-cli",
]


# meta
hss-server-full = [
	"hss-server-mt",
	"hss-server-http1",
	"hss-server-http2",
]

# meta
hss-server-http1 = [
	"hss-server-core",
	"hyper--server-http1",
]

# meta
hss-server-http2 = [
	"hss-server-core",
	"hyper--server-http2",
]

# gate
hss-server-mt = [
	"hss-runtime-mt",
]

# gate
hss-server-sanitize = [
	"hss-sanitize",
]

# gate
hss-server-profiling = [
	"cpuprofiler",
]

# meta(crate)
hss-server-core = [
	"hss-config",
	"hss-accepter",
	"hss-runtime",
	"hyper--server",
#	"hyper--runtime", # NOTE:  Optional for timeouts support.
]

# gate(crate)
hss-accepter = [
	"hss-config",
	"tokio--net",
	"futures",
]

# gate(crate)
hss-config = []


# gate
hss-handler = [
	"hyper--http",
	"futures",
]

# gate
hss-routes = [
	"hss-handler",
	"path-tree",
]

# gate
hss-sanitize = [
	"hyper--http",
]

# gate
hss-extensions = [
	"hyper--http",
]

# gate
hss-resources = [
	"hss-handler",
	"hss-extensions",
]


# gate
hss-exports = []

# gate
hss-runtime = [
	"tokio--rt",
]

# gate
hss-runtime-mt = [
	"hss-runtime",
	"tokio--rt-multi-thread",
]


# gate
hss-main = []

# gate
hss-cli = [
	"vrl-cli-arguments",
]


# gate
hss-tls-rust = [
	"hss-tls-any",
	"rustls",
	"rustls-pemfile",
	"tokio-rustls",
]

# gate
hss-tls-native = [
	"hss-tls-any",
	"native-tls",
	"native-tls/alpn",
	"tokio-native-tls",
]

# gate(crate)
hss-tls-any = []


# gate
hss-jemalloc = [
	"jemallocator",
]

# gate
hss-mimalloc = [
	"mimalloc",
]

# gate
hss-server-debug-strace = []

# gate
hss-server-debug-jemalloc = [
	"jemalloc-sys/stats",
]


hyper--server-http1 = ["hyper--server-http", "hyper--http1"]
hyper--server-http2 = ["hyper--server-http", "hyper--http2"]
hyper--server-http = ["hyper--server"]
hyper--server = ["hyper", "hyper/server"]
hyper--http1 = ["hyper", "hyper/http1", "hyper--http"]
hyper--http2 = ["hyper", "hyper/http2", "hyper--http"]
hyper--http = ["hyper", "http", "http-body", "bytes"]
hyper--runtime = ["hyper", "hyper/runtime"]

tokio--rt = ["tokio", "tokio/rt", "tokio/signal"]
tokio--rt-multi-thread = ["tokio--rt", "tokio/rt-multi-thread"]
tokio--net = ["tokio", "tokio/net"]


features-fuzzing = []
features-none = []




################################################################################
################################################################################




[dependencies]

hyper = { version = "^0.14", default-features = false, features = [], optional = true }
tokio = { version = "^1.35", default-features = false, features = [], optional = true }
http = { version = "^0.2", default-features = false, features = [], optional = true }
http-body = { version = "^0.4", default-features = false, features = [], optional = true }
bytes = { version = "^1.5", default-features = false, features = [], optional = true }

rustls = { version = "^0.19", default-features = false, features = [], optional = true }
tokio-rustls = { version = "^0.22", default-features = false, features = [], optional = true }
rustls-pemfile = { version = "^0.2", default-features = false, features = [], optional = true }

native-tls = { version = "^0.2", default-features = false, features = [], optional = true }
tokio-native-tls = { version = "^0.3", default-features = false, features = [], optional = true }

futures = { version = "^0.3", default-features = false, features = [], optional = true }
path-tree = { version = "^0.4", default-features = false, features = [], optional = true }

cpuprofiler = { version = "^0.0", default-features = false, features = [], optional = true }

jemallocator = { version = "^0.5", default-features = false, features = [], optional = true }
jemalloc-sys = { version = "^0.5", default-features = false, features = [], optional = true }

mimalloc = { version = "^0.1", default-features = false, features = [], optional = true }

vrl-errors = { version = "*", default-features = false, features = [] }
vrl-cli-arguments = { version = "*", default-features = false, features = [], optional = true }




################################################################################
################################################################################




[patch.crates-io]

# vrl-errors = { git = "https://github.com/volution/volution-rust-libraries", tag = "v0.1.1" }
# vrl-cli-arguments = { git = "https://github.com/volution/volution-rust-libraries", tag = "v0.1.1" }

# vrl-errors = { git = "https://github.com/volution/volution-rust-libraries", branch = "console9" }
# vrl-cli-arguments = { git = "https://github.com/volution/volution-rust-libraries", branch = "console9" }

vrl-errors = { git = "https://github.com/volution/volution-rust-libraries", branch = "development" }
vrl-cli-arguments = { git = "https://github.com/volution/volution-rust-libraries", branch = "development" }

# vrl-errors = { path = "../../volution-rust-libraries/sources/errors" }
# vrl-cli-arguments = { path = "../../volution-rust-libraries/sources/cli-arguments" }




################################################################################
################################################################################




[profile.dev]
incremental = true
codegen-units = 1024
opt-level = 1
lto = "off"
debug = "full"
debug-assertions = true
overflow-checks = true
strip = "none"
split-debuginfo = "packed"
rpath = false
panic = "unwind"


[profile.test]
incremental = true
codegen-units = 1024
opt-level = 1
lto = "off"
debug = "full"
debug-assertions = true
overflow-checks = true
strip = "none"
rpath = false
split-debuginfo = "packed"


[profile.release]
incremental = false
codegen-units = 1
opt-level = 3
lto = "fat"
debug = "none"
debug-assertions = false
overflow-checks = true
strip = "symbols"
split-debuginfo = "packed"
rpath = false
panic = "abort"


[profile.bench]
incremental = false
codegen-units = 1
opt-level = 3
lto = "fat"
debug = "none"
debug-assertions = false
overflow-checks = true
strip = "symbols"
split-debuginfo = "packed"
rpath = false




[profile.dev.package."*"]
incremental = true
codegen-units = 1024
opt-level = 1
debug = "full"
debug-assertions = true
overflow-checks = true
strip = "none"
split-debuginfo = "packed"




[profile.dev.build-override]
incremental = true
codegen-units = 1024
opt-level = 2
debug = "full"
debug-assertions = true
overflow-checks = true
strip = "none"
split-debuginfo = "packed"


[profile.release.build-override]
incremental = true
codegen-units = 1024
opt-level = 2
debug = "none"
debug-assertions = false
overflow-checks = true
strip = "symbols"
split-debuginfo = "packed"




################################################################################
################################################################################

